--- a/assets/css/style_all_pages.css
+++ b/assets/css/style_all_pages.css
@@ -87,7 +87,7 @@ body {
     color: #4aaaa5;
 }
 
-.main {
+.container {
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: auto;
@@ -96,7 +96,6 @@ body {
     background-color: #ffffff;
     border-radius: 16px;
 }
-
 footer {
     text-align: center;
     /* margin-top: 50px; */
