--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -1,7 +1,7 @@
 h6 {
     color: whitesmoke;
     background-color: #4aaaa5;
-    height: 20px;
+    height: 40px;
     width: 250px;
     text-align: center;
     position: absolute;
@@ -16,48 +16,52 @@ h6 {
     margin-right: 30px;
 }
 
+.col-sm-5 {
+    margin-bottom: 10px;
+}
+
 .pics{
     /* position: relative; */
 }
-
+/* 
 .pic1{
     float: left;
     margin-left: 30px;
     margin-bottom: 35px;
-}
+} */
 .pic1:hover{
     opacity: 0.7;
 }
-.pic2{
+/* .pic2{
     float: left;
     margin-right: 200px;
     margin-left: 50px;
     margin-bottom: 35px;
-}
+} */
 .pic2:hover{
     opacity: 0.7;
 }
-.pic3{
+/* .pic3{
     float: left;
     margin-left: 30px;
     margin-bottom: 35px;
-}
+} */
 .pic3:hover{
     opacity: 0.7;
 }
-.pic4{
+/* .pic4{
     float: left;
     margin-right: 200px;
     margin-left: 50px;
     margin-bottom: 35px;
-}
+} */
 .pic4:hover{
     opacity: 0.7;
 }
-.pic5{
+/* .pic5{
     float: left;
     margin-left: 30px;
-}
+} */
 .pic5:hover{
     opacity: 0.7;
 }
