--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -1,7 +1,7 @@
 h6 {
     color: whitesmoke;
     background-color: #4aaaa5;
-    height: 40px;
+    height: 50px;
     width: 250px;
     text-align: center;
     position: absolute;
@@ -16,54 +16,34 @@ h6 {
     margin-right: 30px;
 }
 
-.col-sm-5 {
-    margin-bottom: 10px;
+.col-sm-4 {
+    margin-bottom: 20px;
+}
+
+.col-sm-4:hover {
+    opacity: 0.7;
+}
+
+#gbooks {
+    width: 90%; 
+    padding-left: 10%; 
+    margin-top: 14%;
+}
+
+#giphy {
+    width: 70%;
+    height: 85%;
+    padding-left: 15%;
+    margin-top: 5%;
+}
+
+#train {
+    width: 90%;
 }
 
 .pics{
-    /* position: relative; */
-}
-/* 
-.pic1{
-    float: left;
-    margin-left: 30px;
-    margin-bottom: 35px;
-} */
-.pic1:hover{
-    opacity: 0.7;
-}
-/* .pic2{
-    float: left;
-    margin-right: 200px;
-    margin-left: 50px;
-    margin-bottom: 35px;
-} */
-.pic2:hover{
-    opacity: 0.7;
-}
-/* .pic3{
-    float: left;
-    margin-left: 30px;
-    margin-bottom: 35px;
-} */
-.pic3:hover{
-    opacity: 0.7;
-}
-/* .pic4{
-    float: left;
-    margin-right: 200px;
-    margin-left: 50px;
-    margin-bottom: 35px;
-} */
-.pic4:hover{
-    opacity: 0.7;
-}
-/* .pic5{
-    float: left;
-    margin-left: 30px;
-} */
-.pic5:hover{
-    opacity: 0.7;
+    position: relative;
+    margin-bottom: 25px;
 }
 
 input{
