--- a/assets/css/style_all_pages.css
+++ b/assets/css/style_all_pages.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("../images/memphis-mini-dark.png");
+    background-image: url("../images/linkedin.png");
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -116,4 +116,8 @@ footer {
 h2 {
     border: #666666;
     text-decoration-color: #ffffff
+}
+
+.box {
+    opacity: 0.7;
 }
