styling updates - final background image with transparency

--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -3,3 +3,16 @@
     padding-top: 5%;
     padding-bottom: 2%;;
 }
+
+#linkedin {
+    height: 100px;
+    width: 100px;
+}
+#github{
+    height: 100px;
+    width: 150px;
+}
+
+.contactPics {
+    width: 40%;
+}
