--- a/assets/css/style_all_pages.css
+++ b/assets/css/style_all_pages.css
@@ -5,9 +5,16 @@
 }
 
 body {
-    background-image: url("../images/linkedin.png");
-    color: #777777;
+    background-image: url("../images/golf-background.jpg");
+    color: #6b6b6b;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .tab {
@@ -28,7 +35,7 @@ body {
 }
 
 .tablinks:hover {
-    background-color: goldenrod;
+    background-color: darkgreen;
 }
 
 /* .header{
@@ -42,20 +49,20 @@ body {
 } */
 
 .navbar {
-    background-color: #ffffff;
+    background-color: darkgreen;
     padding-top: 0;
     padding-bottom: 0;
 }
 
 .navbar-brand {
     margin-left: 17%;
-    background-color: #4aaaa5;
-    color: #666666;
+    background-color: darkgreen;
+    color: whitesmoke;
     width: 150px;
     height: 100%;
     text-align: center;
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 .nav-item {
     width: auto;
@@ -80,11 +87,11 @@ body {
 } */
 
 .title {
-    border-bottom: #666666 4px solid;
+    border-bottom: darkgreen 4px solid;
     margin-right: 10px;
     padding-bottom: 20px;
     margin-top: 20px;
-    color: #4aaaa5;
+    color: darkgreen;
 }
 
 .container {
@@ -93,23 +100,22 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 960px;
-    background-color: #ffffff;
+    background-color: darkgreen;
     border-radius: 16px;
 }
 footer {
     text-align: center;
     /* margin-top: 50px; */
-    border-top: 8px solid #4aaaa5;
-    background-color: #666666;
-    height: 20px;
+    background-color: darkgreen;
+    height: 30px;
     width: 100%;
     position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
-    padding-top: 25px;
-    padding-bottom: 1px;
-    font-size: 10px;
+    /* padding-top: 25px; */
+    /* padding-bottom: 1px; */
+    font-size: 14px;
     color: whitesmoke;
 }
 
@@ -119,5 +125,6 @@ h2 {
 }
 
 .box {
-    opacity: 0.7;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: darkgreen 1px solid;
 }
