--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -20,15 +20,15 @@ h6 {
     margin-bottom: 20px;
 }
 
-.col-sm-4:hover {
-    opacity: 0.7;
-}
-
 #gbooks {
     width: 90%; 
     padding-left: 10%; 
     margin-top: 14%;
 }
+    #gbooks:hover {
+        transform: 1.1;
+    }
+
 
 #giphy {
     width: 70%;
@@ -51,3 +51,6 @@ input{
     background-color: #4aaaa5;
 }
 
+.pic {
+    opacity: 1.0;
+}
