--- a/assets/css/style_all_pages.css
+++ b/assets/css/style_all_pages.css
@@ -48,6 +48,10 @@ body {
     top: 0;
 } */
 
+.color {
+    color: darkgreen;
+}
+
 .navbar {
     background-color: darkgreen;
     padding-top: 0;
