--- a/assets/css/style_all_pages.css
+++ b/assets/css/style_all_pages.css
@@ -5,17 +5,11 @@
 }
 
 body {
-    background-image: url("../images/golf-background.jpg");
-    color: #6b6b6b;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-      /* Full height */
-  /* height: auto; */
-
-  /* Center and scale the image nicely */
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: scroll;
+    background: url("../images/golf-background.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .tab {
