--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -11,6 +11,11 @@ h6 {
     font-size: 1rem;
 }
 
+.container {
+    width: 90%;
+    text-align: center;
+}
+
 .title {
     margin-left: 30px;
     margin-right: 30px;
