--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -12,12 +12,12 @@
 #github{
     height: 100px;
     width: 150px;
-    margin-left: 25%;
+    /* margin-left: 25%; */
 }
 
-.contactPics {
+/* .contactPics {
     width: 40%;
-}
+} */
 
 .container {
     width: 90%;
