--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -5,14 +5,18 @@
 }
 
 #linkedin {
+    display: block;
+    margin: auto;
     height: 100px;
     width: 100px;
-    margin-left: 25%;
+    /* margin-left: 25%; */
 }
 #github{
+    display: block;
+    margin: auto;
     height: 100px;
     width: 150px;
-    /* margin-left: 25%; */
+    margin-bottom: 15px;
 }
 
 /* .contactPics {
