--- a/assets/css/style_all_pages.css
+++ b/assets/css/style_all_pages.css
@@ -10,6 +10,8 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    position: relative;
+    padding-bottom: 30px;
 }
 
 .tab {
@@ -27,6 +29,7 @@ body {
     border-top: none;
     background: none;
     margin-top: 50px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .tablinks:hover {
@@ -51,6 +54,7 @@ body {
     background-color: darkgreen;
     padding-top: 0;
     padding-bottom: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navbar-brand {
@@ -63,6 +67,7 @@ body {
     text-align: center;
     padding-top: 6px;
     padding-bottom: 6px;
+    font-family: 'Roboto', sans-serif;
 }
 .nav-item {
     width: auto;
@@ -88,6 +93,8 @@ body {
     padding-bottom: 20px;
     margin-top: 20px;
     color: darkgreen;
+    font-family: 'Merriweather', serif;
+    letter-spacing: 0.25em;
 }
 
 .container {
@@ -98,6 +105,7 @@ body {
     width: 960px;
     background-color: darkgreen;
     border-radius: 16px;
+    font-family: 'Roboto', sans-serif;
 }
 footer {
     text-align: center;
@@ -106,13 +114,14 @@ footer {
     background-color: darkgrey;
     height: 30px;
     width: 100%;
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
     /* padding-top: 25px; */
     /* padding-bottom: 1px; */
     font-size: 14px;
+    font-family: 'Roboto', sans-serif;
 }
 
 h2 {
