--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -10,6 +10,9 @@ h6 {
     margin-top: 190px;
     font-size: 1rem;
 }
+body{
+    position: relative;
+}
 
 .container {
     width: 90%;
@@ -22,24 +25,29 @@ h6 {
 }
 
 .col-sm-4 {
-    margin-bottom: 10px;
+    display: flexbox;
+    margin-top: 10%;
+}
+
+#seinfeld{ 
+    margin-top: 5%;
 }
 
 #gbooks {
     width: 90%; 
-    padding-left: 10%; 
-    margin-top: 14%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 14%;
+    padding-bottom: 14%; 
+    margin: auto;
 }
-    #gbooks:hover {
-        transform: 1.1;
-    }
-
 
 #giphy {
     width: 70%;
     height: 85%;
     /* padding-left: 15%; */
-    margin-top: 5%;
+    /* margin-top: 5%; */
+    display: flexbox;
 }
 
 .pic {
@@ -50,7 +58,7 @@ h6 {
 #hangman {
     height: 75%;
     width: 80%;
-    margin-left: 7%;
+    /* margin-left: 7%; */
     margin-top: 5%;
 }
 
@@ -66,4 +74,20 @@ input{
 
 .pic {
     opacity: 1.0;
+}
+
+footer {
+    text-align: center;
+    /* margin-top: 50px; */
+    color: darkgreen;
+    background-color: darkgrey;
+    height: 30px;
+    width: 100%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    /* padding-top: 25px; */
+    /* padding-bottom: 1px; */
+    font-size: 14px;
 }
