styling update and fixed footer and images

--- a/assets/css/style_all_pages.css
+++ b/assets/css/style_all_pages.css
@@ -67,8 +67,10 @@ body {
     text-align: center;
     padding-top: 6px;
     padding-bottom: 6px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Merriweather', serif;
+    letter-spacing: 0.05em;
 }
+
 .nav-item {
     width: auto;
     margin: auto;
@@ -107,6 +109,7 @@ body {
     border-radius: 16px;
     font-family: 'Roboto', sans-serif;
 }
+
 footer {
     text-align: center;
     /* margin-top: 50px; */
