--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -19,11 +19,6 @@ body{
     text-align: center;
 }
 
-.title {
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
 .col-sm-4 {
     display: flexbox;
     margin-top: 10%;
@@ -56,15 +51,8 @@ body{
 }
 
 #hangman {
-    height: 75%;
-    width: 80%;
-    /* margin-left: 7%; */
-    margin-top: 5%;
-}
-
-.pics{
-    position: relative;
-    /* margin-bottom: 25px; */
+    /* height: 75%;
+    width: 80%; */
 }
 
 input{
@@ -76,18 +64,3 @@ input{
     opacity: 1.0;
 }
 
-footer {
-    text-align: center;
-    /* margin-top: 50px; */
-    color: darkgreen;
-    background-color: darkgrey;
-    height: 30px;
-    width: 100%;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    /* padding-top: 25px; */
-    /* padding-bottom: 1px; */
-    font-size: 14px;
-}
